--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -1,5 +1,6 @@
 backend:
   name: git-gateway
+  branch: master # Branch to update (optional; defaults to master)
 
 media_folder: source/images/uploads
 public_folder: /images/uploads
