--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -21,9 +21,20 @@ collections:
       - {label: Publish Date, name: date, widget: datetime}
       - {label: Image, name: image, widget: image, required: true}
 
-      - {label: Weight, name: weight, widget: number}
-      - {label: Price, name: price, widget: number}
+  # case study article example
+  - name: caseStudy
+    label: Case-Study
+    format: frontmatter
+    extension: .html.md
+    folder: data/case-studies/
+    create: true
+    slug: '{{title}}'
+    fields:
+      - {label: Title, name: title, widget: string, required: true}
+      - {label: Download, name: download, widget: file, required: false}
+      - {label: Image, name: image, widget: image, required: true}
       - {label: Body, name: body, widget: markdown}
+      - {label: Stats, name: stats, widget: string, required: true}
 
 #markdown middleman blog example
   - name: blog
