--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -28,9 +28,10 @@ collections:
     extension: .html.md
     folder: data/case-studies/
     create: true
-    slug: '{{title}}'
+    slug: '{{url}}'
     fields:
       - {label: Title, name: title, widget: string, required: true}
+      - {label: URL, name: url, widget: string, required: true}
       - {label: Download, name: download, widget: file, required: false}
       - {label: Image, name: image, widget: image, required: true}
       - {label: Body, name: body, widget: markdown}
