--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -23,7 +23,7 @@ collections:
 
   # case study article example
   - name: caseStudy
-    label: Case-Study
+    label: caseStudy
     format: frontmatter
     extension: .html.md
     folder: data/case-studies/
