trying to build v2

--- a/source/admin/config.yml
+++ b/source/admin/config.yml
@@ -26,7 +26,7 @@ collections:
     label: caseStudy
     format: frontmatter
     extension: .html.md
-    folder: data/case-studies/
+    folder: source/posts/
     create: true
     slug: '{{url}}'
     fields:
